--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
 </head>
 <body>
     <section class="container">
+        <center>
         <div class="page">
             <form action="">
             <img src="./images/todo.png" alt="todo-list" style="width:50%;height:50%;">
             <div><br>
                 <label class="label">TO-DO list</label> <br><br>
                 <input class="formInput" type="text" type="text" name="todo" id="todo" required>
-                <button type="submit" name="add"><span>ADD</span></button>
+                <button type="submit" name="add" class="submit"><span>ADD</span></button>
             </div>
 
             </form>
@@ -28,6 +29,7 @@
                 <!-- <li>Finnish my ToDO list</li> -->
             </div>
         </div>
+    </center>
     </section>
 
     <script>
