added my details and fav

--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <title>to do list Thato</title>
 
-    <!-- java script -->
-    <script src="myscripts.js"></script>
+    <link rel="shortcut icon" type="image/png" href="images/icon.png"/>
 
 </head>
 <body>
@@ -29,6 +28,12 @@
                 <!-- <li>Finnish my ToDO list</li> -->
             </div>
         </div>
+
+        <div class="mydetails">
+        
+             <p><Details></Details>: <a href="https://emekathatonwamadi.netlify.app/resources/CV.pdf" target="_blank">My Resume</a></p>
+             <p>By: <a href="https://emekathatonwamadi.netlify.app/" target="_blank">Emeka Thato Nwamadi</a></p>
+        </div>    
     </center>
     </section>
 
